# pumppoly

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  hardhat.config.ts  package.json  tsconfig.json
contracts/: LiquidityPool.sol  MarketFactory.sol  PlatformToken.sol  PredictionMarket.sol
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/constants/: index.ts
frontend/src/idl/: prediction_market.ts
frontend/src/pages/: CreateMarket.tsx  Home.tsx  MarketDetail.tsx
frontend/src/types/: global.d.ts
frontend/src/utils/: accounts.ts
programs/pump-poly/src/: lib.rs
scripts/: deploy.ts
tests/: pump-poly.ts
